2012-01-27  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_files.php: Fixed deleting file in 
	a incident target page with missed jQuery call for bug 3438707

2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* operation/inventories/inventory.php;: Fixed inventory search by
	side menu ID box.

2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/filemgr.php: Fixed changing of base directory
	into file mangement section

2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.mysql.php
	include/js/integria_incident_search.js
	include/functions_inventories.php
	operation/inventories/inventory_detail.php: Fixed 
	several bugs for SF Bugs tracker #3479544 as 
	inventory blank or repeated names when creates, order 
	of combos, sla combo hidden, etc.

2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* include/integria_cron.php
	operation/side_menu.php
	godmode/setup/setup_pandora.php: Added to the cron
	a Pandora agents synchronization with Integria 
	inventory objects

2012-01-24  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css: Fixed some style
	errors in upload control

	* operation/download/browse.php: Fixed search pattern
	in the file releases combo

2012-01-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	operation/invoices/invoices.php: Fixed some details in
	the upload forms and fixed the invoices form adding 
	upload missed feature and fixing some bugs

2012-01-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	operation/invoices/invoices.php
	operation/projects/task_cost.php: Fixed latest upload
	controls implementations. Improved the upload 
	control function to allow set the control in any place
	into de form

2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php
	include/functions_incidents.php
	include/functions_db.php: Fixed several bugs of the 