@@ -373,4 +373,9 @@ $(document).ready (function () {
 	$("#search_status").attr ("value", -10);
 	$("#search_incident_form").submit ();
 });
+
+function readMoreWU(id_workunit) {
+	$('#short_wu_'+id_workunit).hide();
+	$('#long_wu_'+id_workunit).show();
+}
 </script>
