@@ -143,10 +143,15 @@ if ($workunits === false) {
 	return;
 }
 
+$workunit_ids = array();
 foreach ($workunits as $workunit) {
 	$workunit_data = get_workunit_data ($workunit['id_workunit']);
+	// Store ids to show long workunits from javascript
+	$workunit_ids[] = $workunit['id_workunit'];
 	show_workunit_data ($workunit_data, $title);
 }
+
+$workunit_ids = implode(',',$workunit_ids);
 
 $generated_str = '<div class="report_info" style="text-align: right; width: 95%;">';
 $generated_str .= print_label (__('Generated by').' : ', '', '', true,
@@ -157,3 +162,17 @@ $generated_str .= '</div>';
 
 echo $generated_str;
 ?>
+
+<script type="text/javascript">
+// Receive workunit ids from PHP to call read more function
+var workunit_ids = '<?php echo $workunit_ids;?>';
+workunit_ids = workunit_ids.split(',');
+for (var i = 0; i < workunit_ids.length; i++) {
+	readMoreWU(workunit_ids[i]);
+} 
+
+function readMoreWU(id_workunit) {
+	$('#short_wu_'+id_workunit).hide();
+	$('#long_wu_'+id_workunit).show();
+}
+</script>
